# CodeReviewAI_task

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py  redis_client.py  schemas.py
app/api/: routes.py
app/external_api/: gh_const.py  github_api.py  openAI_api.py
app/helpers/: file_and_openai.py
tests/: test_main.py
